# tracy_c_demo

./: README.md  meson.build
include/: trace.h
src/: main.c
